// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallToAction renders a button only 1`] = `
<div
  className="callToAction buttonOnlyVariation"
  id="call-to-action"
>
  <div
    className="content"
  >
    <div
      className="column"
    >
      <a
        className="button large link primary responsive spacing"
        href="http://www.example.com/"
      >
        Call To Action
      </a>
    </div>
  </div>
</div>
`;

exports[`CallToAction renders a large size 1`] = `
<div
  className="callToAction largeVariation"
  id="call-to-action"
>
  <div
    className="image"
    style={
      Object {
        "backgroundImage": "url(http://example.com/someImage.jpg)",
      }
    }
    title="alt text for image"
  />
  <div
    className="content"
  >
    <div
      className="column"
    >
      <h3>
        This is the headline for the CTA.
      </h3>
    </div>
    <div>
      <hr
        className="dash"
        style={
          Object {
            "width": "1.611rem",
          }
        }
      />
      <p
        className="blurb"
      >
        This is the blurb for the CTA.
      </p>
    </div>
    <div
      className="column"
    >
      <a
        className="button alternate large link primary responsive spacing"
        href="http://www.example.com/"
      >
        Call To Action
      </a>
    </div>
  </div>
</div>
`;

exports[`CallToAction renders a medium size 1`] = `
<div
  className="callToAction mediumVariation"
  id="call-to-action"
>
  <div
    className="content"
  >
    <div
      className="column"
    >
      <h3>
        This is the headline for the CTA.
      </h3>
    </div>
    <div>
      <hr
        className="dash"
        style={
          Object {
            "width": "1.611rem",
          }
        }
      />
      <p
        className="blurb"
      >
        This is the blurb for the CTA.
      </p>
    </div>
    <div
      className="column"
    >
      <a
        className="button alternate large link primary responsive spacing"
        href="http://www.example.com/"
      >
        Call To Action
      </a>
    </div>
  </div>
</div>
`;

exports[`CallToAction renders a small size 1`] = `
<div
  className="callToAction smallVariation"
  id="call-to-action"
>
  <div
    className="content"
  >
    <div
      className="column"
    >
      <h3>
        This is the headline for the CTA.
      </h3>
    </div>
    <div
      className="column"
    >
      <a
        className="button alternate large link primary responsive spacing"
        href="http://www.example.com/"
      >
        Call To Action
      </a>
    </div>
  </div>
</div>
`;
